[package]
name = "dusk"
version = "0.1.0"
authors = ["hvlck <just.ethan@protonmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/hvlck/dusk"
repository = "https://github.com/hvlck/dusk"
license = "GPL-3.0-or-later"
publish = false

[workspace]
members = [
    "crates/views",
    "crates/api",
    "crates/store",
    "crates/util"
]

[dependencies]
sled = "~0.34.6"
actix-web = "~3.3"
actix-files = "~0.5.0"
askama_actix = "~0.11.1"
serde = "~1.0.126"

views = { path = "./crates/views" }
api = { path = "./crates/api" }
